moved backend into its own subfolder of the root project